fixed center align on p elements, added .black-spacer class

--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@
   text-align: left;
 }
 
+.msdi-body:not(p) {
+  text-align: center;
+}
+
 .climate-action {
   height: 50vh;
   background-image: url("img/climate.png");
@@ -68,6 +72,7 @@
 form {
   height: 33.3vh;
   background-color: #ef3a4b;
+  color: #fff;
 }
 
 .form-container {
@@ -304,6 +309,11 @@ li:not(:last-of-type) {
 
 .row-spacer {
   height: 2em;
+}
+
+.black-spacer {
+  height: 2em;
+  background-color: #0a0a0a;
 }
 
 .sm-row-spacer {
